# Backend-Talentlyca

./: LICENSE
TalentlyticaProjects/: test.py  textseg.py
TalentlyticaProjects/prediction/: __init__.py  downloader.py  main.py
fast-api/: .env.example  .gitignore  requirements.txt  setup.cfg
fast-api/backend/: __init__.py  api-multi.py  api.py  api.py.save  upload.py
