[metadata]
name = fast-api
version = 0.0.1
description = Fast API
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
keywords = fastapi

[options]
packages = find:
python_requires = >=3.7 
install_requires =
    fastapi==0.78.0
    prediction==0.0.3
    protobuf==4.21.1
    pydantic==1.8.2
    python-dotenv==0.20.0
    uvicorn==0.17.6
    google-cloud-storage==1.13.0


[options.packages.find]
exclude =
    docs
    tests

[options.entry_points]
console_scripts =
    cv-extraction = prediction.api:main
